Add in the proper actionscript stamp translations, and teach the world flex app about the passport resource bundle.
I should probably make some sort of basic viewer to iterate over the badges and make sure that the 
translation messages have been set up correctly.  Maybe I'll get to that today.

--- a/src/as/world.mxml
+++ b/src/as/world.mxml
@@ -17,6 +17,7 @@
     [ResourceBundle("notify")]
     [ResourceBundle("prefs")]
     [ResourceBundle("world")]
+    [ResourceBundle("passport")]
 </mx:Metadata>
 <mx:Script>
     <![CDATA[
