--- a/pages/css/shop.css
+++ b/pages/css/shop.css
@@ -37,6 +37,11 @@
   padding-top: 3px;
 }
 
+.sideBar .FavoritesNaviPanel {
+  background: url(/images/shop/navi_fav.png) no-repeat top;
+  height: 246px;
+}
+
 .sideBar .NaviPanel div {
   padding: 3px 0px 0px 5px;
   height: 21px;
@@ -211,5 +216,15 @@
 
 .itemGridPanel .Contents {
   margin: 10px;
-  width: 650px;
+  width: 555px;
+  background: #FFFFFF;
 }
+
+.itemGridPanel .pagedGrid .Header .TopLeft {
+  background: #1D5884 url(/images/ui/grid_header_left.png) no-repeat left;
+}
+
+.itemGridPanel .pagedGrid .Header .TopRight {
+  background: #1D5884 url(/images/ui/grid_header_right.png) no-repeat right;
+}
+
