--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -272,3 +272,20 @@
 .badgeDisplay .ProgressBar .Fill {
   background-repeat: repeat;
 }
+
+.badgeDisplay .GoButton, .badgeDisplay .GoButton-hovering, .badgeDisplay .GoButton-down {
+  width: 40px;
+  height: 17px;
+}
+
+.badgeDisplay .GoButton {
+  background-image: url(/images/me/go_up.png);
+}
+
+.badgeDisplay .GoButton-hovering {
+  background-image: url(/images/me/go_over.png);
+}
+
+.badgeDisplay .GoButton-down {
+  background-image: url(/images/me/go_down.png);
+}
