I *knew* I had seen that "Go!" button somewhere else.  It was on the games page, and didn't have fancy hover or down states.  Now that we have those states, I've moved the art up to images/ui, the css to global.css, and use it in both places.

--- a/pages/css/global.css
+++ b/pages/css/global.css
@@ -47,3 +47,18 @@ blockquote {
   margin-top: 5px;
   margin-bottom: 10px;
 }
+
+.GoButton {
+  width: 40px;
+  height: 17px;
+  background-image: url(/images/ui/go_up.png);
+}
+
+.GoButton-hovering {
+  background-image: url(/images/ui/go_over.png);
+}
+
+.GoButton-down {
+  background-image: url(/images/ui/go_down.png);
+}
+
