Display a little "progress" image over top of the dynamically created progress bar.
I thought this was going to be basically impossible, and told Jon we'd probably have to nix it.  
Now that Sarah's got me straigtened out and using completely CSSified layout, it was trivial to 
implement, and looks great.  Huzzah!

--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -313,6 +313,12 @@
   left: 7px;
 }
 
+.badgeDisplay .ProgressLabel {
+  position: absolute;
+  top: 118px;
+  left: 31px;
+}
+
 .badgeDisplay .WhenEarned {
   width: 142px;
   font-size: 12px;
