When someone creates an account for the first time, briefly display a confirmation message, along with a wee little AdWords tracking iframe.
This iframe business is a little brittle, but it's the way they officially recommend doing 
tracking from dynamic pages; their tracker relies on both a beacon and their own JS.

cf. https://adwords.google.com/support/bin/answer.py?answer=27338&topic=60

WRLD-274

--- a/pages/css/account.css
+++ b/pages/css/account.css
@@ -105,6 +105,11 @@
   border: solid #5c5d61 1px;
 }
 
+.createAccount .AdWordsFrame {
+  width: 100%;
+  border: 0px inset;
+}
+
 /* ------------------------------------
    LOGIN PAGE
 -------------------------------------*/
