Oh yeah... figures I would forget a feature for the initial release :(.
Let other people view your passport page.  I'll be adding a link from the profile, and will link
the feed messages properly.  We should also probably have a "recent stamps" section like 
trophies on their profile... not sure if I'll get that in tonight

--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -302,6 +302,12 @@
   padding-top: 10px;
 }
 
+.passport .headerBox .Contents .EmptyLabel {
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+}
+
 /* ------------------------------------
    BADGE DISPLAYS ANYWHERE
 -------------------------------------*/
