Mechanism for configuring the log levels for msoy applications: * New DeploymentConfig value * New class to hook up the value to com.threerings.util.Log * Ant code to copy from properties to config * New placeholder line in properties.dist file

--- a/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
+++ b/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
@@ -11,6 +11,7 @@ package com.threerings.msoy.client {
         public static const devDeployment :Boolean = @dev_deployment@;
         public static const mediaURL :String = "@media_url@";
         public static const staticMediaURL :String = "@static_media_url@";
+        public static const logLevelsConfig :String = "@log_levels_config@";
 
         private static function staticInit () :void
         {
