--- a/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
+++ b/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
@@ -13,6 +13,9 @@ package com.threerings.msoy.client {
         public static const staticMediaURL :String = "@static_media_url@";
         public static const logLevelsConfig :String = "@log_levels_config@";
 
+        /** Are bars (and bling) yet enabled on this server? */
+        public static const barsEnabled :Boolean = false; //@bars_enabled@;
+
         private static function staticInit () :void
         {
             if (-1 != mediaURL.indexOf(serverHost)) {
