Started breaking out the Stuff page.  First step: reformat the existing #stuff page.  Note the various TODOs that still need doing, including the search feature which is styled but hidden.  Next step will be to write search feature functionality, then replace the Friends tab with the new Stuff tab, and remove the stuff header from Me.

--- a/pages/css/me.css
+++ b/pages/css/me.css
@@ -5,6 +5,20 @@
  */
 
 /* ------------------------------------
+   NAVIGATION BAR
+   TODO: delete when nav bar is removed from #me
+-------------------------------------*/
+
+.stuffNaviBar {
+  margin-left: 7px;
+  margin-top: 10px;
+}
+
+.stuffNaviBar img {
+  float: left;
+}
+
+/* ------------------------------------
    POPUP PAGE
 -------------------------------------*/
 
