--- a/pages/css/shop.css
+++ b/pages/css/shop.css
@@ -177,6 +177,11 @@
   font-weight: bold;
 }
 
+.listingDetailPanel .Buy table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .listingDetailPanel .Bought {
   border: 1px solid #3776A0;
   padding: 5px;
