Added sales pitch blurbs for level and item packs, display said blurbs where we do our other item type blurbs in the shop. Modified the SideBar to shrink the font size a smidgen for long item names (hackasaurus, yay for HTML). Other small tidying.

--- a/pages/css/shop.css
+++ b/pages/css/shop.css
@@ -40,6 +40,11 @@
   background: #C6E2F8 url(/images/shop/navi_bg_cell.png) repeat top;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   padding: 3px 0px 0px 5px;
+  white-space: nowrap;
+}
+
+.sideBar .NaviPanel .LongCell {
+  font-size: 15px;
 }
 
 .sideBar .NaviPanel .Selected {
