Move the clear into the my stuff navigation bar where it should be.  When time allows, I'd like to make this pattern into a generic replacement for GWT's HorizontalPanel whose html output is harder to trace and to style using css.

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -912,3 +912,8 @@ img, embed, applet, object {
 .complainPopup {
   width: 400px;
 }
+
+/** Place <div style="clear"/> to force a line break after floating elements */
+.clear {
+  clear: both;
+}
