--- a/pages/css/item.css
+++ b/pages/css/item.css
@@ -150,3 +150,15 @@
 .remixableLabel .inlineL {
   vertical-align: top;
 }
+
+/* ------------------------------------
+   NAVIGATION BAR
+-------------------------------------*/
+
+.stuffNaviBar {
+  margin-left: 7px;
+}
+
+.stuffNaviBar img {
+  float: left;
+}
