Whoops, this went with r11639.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -494,7 +494,7 @@ TabNavigator, TabBar {
   backgroundAlphaOpen: .85;
 }
 
-.coinLabel {
+.currencyLabel {
   color: white;
   fontSize: 12;
   fontWeight: "bold";
