We're getting closer. Let's just tie "barsEnabled" to "devDeployment" now.

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -30,7 +30,7 @@ public class DeploymentConfig
     public static final boolean devDeployment = @dev_deployment@;
 
     /** Are bars (and bling) yet enabled on this server? */
-    public static final boolean barsEnabled = false; //@bars_enabled@;
+    public static final boolean barsEnabled = @dev_deployment@;
 
     /** The public key for our RECAPTCHA service or "" if it's disabled. */
     public static final String recaptchaPublic = "@recaptcha_public@";
