--- a/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
+++ b/src/as/com/threerings/msoy/client/DeploymentConfig.as.tmpl
@@ -14,7 +14,7 @@ package com.threerings.msoy.client {
         public static const logLevelsConfig :String = "@log_levels_config@";
 
         /** Are bars (and bling) yet enabled on this server? */
-        public static const barsEnabled :Boolean = false; //@bars_enabled@;
+        public static const barsEnabled :Boolean = @dev_deployment@;
 
         private static function staticInit () :void
         {
