--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -171,6 +171,11 @@
   margin-right: auto;
 }
 
+.listingDetailPanel .longThinOrangeButton {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .listingDetailPanel .Info {
   margin-left: auto;
   margin-right: auto;
