--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -34,4 +34,7 @@ public class DeploymentConfig
 
     /** The public key for our RECAPTCHA service or "" if it's disabled. */
     public static final String recaptchaPublic = "@recaptcha_public@";
+    
+    /** The URL to reach billing. */
+    public static final String billingURL = "@billing_url@";
 }
