--- a/src/gwt/public/global/global.css
+++ b/src/gwt/public/global/global.css
@@ -1,7 +1,8 @@
 /**
  * $Id$
  *
- * CSS styles shared globally.
+ * CSS styles shared (really) )globally. DO NOT put GWT stylings in here.
+ * Global GWT stylings go in gwt.css.
  */
 
 html, body {
@@ -47,18 +48,3 @@ blockquote {
   margin-top: 5px;
   margin-bottom: 10px;
 }
-
-.GoButton {
-  width: 40px;
-  height: 17px;
-  background-image: url(/images/ui/go_up.png);
-}
-
-.GoButton-hovering {
-  background-image: url(/images/ui/go_over.png);
-}
-
-.GoButton-down {
-  background-image: url(/images/ui/go_down.png);
-}
-
