--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -917,3 +917,18 @@ img, embed, applet, object {
 .clear {
   clear: both;
 }
+
+/** Go go speed racer. */
+.GoButton {
+  width: 40px;
+  height: 17px;
+  background-image: url(/images/ui/go_up.png);
+}
+
+.GoButton-hovering {
+  background-image: url(/images/ui/go_over.png);
+}
+
+.GoButton-down {
+  background-image: url(/images/ui/go_down.png);
+}
