Actually, let's just make a decent user interface. We still want a buy button that has the currency right in it, but that's going to be an HTML PITA.

--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -185,6 +185,10 @@
   font-weight: bold;
 }
 
+.listingDetailPanel .Buy {
+  text-align: center;
+}
+
 .listingDetailPanel .Buy table {
   margin-left: auto;
   margin-right: auto;
